--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,14 @@
 pipeline{
-    agent {
-        docker { image: 'node16-alpine'}
+  agent {
+    docker { image: 'node16-alpine'}
     }
     
-    stages{
-        stage('Test'){
-            steps{
-                sh 'node -version'
+  stages{
+    stage('Test'){
+      steps{
+                sh 'node --version'
             }
             
         }
     }
 }
-
